Update "Shāh māt" blog post with permalink correction, enhanced descriptions, and additional images

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,8 @@
 ---
 title: "Shāh māt"
 date: 2025-09-08
-permalink: /posts/2012/08/blog-post-1/
+permalink: /posts/shah-mat
+description: "Exploring the intersection of chess, AI, and graphical models."
 tags:
   - cool posts
 ---
@@ -10,12 +11,13 @@ tags:
 
 ## "Shāh māt" means "the king is dead" in Persian, and it’s the term used in chess when a player checkmates their opponent.
 
-<a href="https://taketaketake.com/" target="_blank"> Take Take Take</a> is an innovative platform dedicated to tracking chess tournaments and providing live updates on ongoing games. Recently, the site hosted an exciting contest to identify the best AI chess player, with Kaggle facilitating the competition. The challenge? To build an AI capable of playing chess at a grandmaster level.
+<a href="https://taketaketake.com/" target="_blank"> Take Take Take</a> is an innovative platform dedicated to tracking chess tournaments and providing live updates on ongoing games. Recently, the site hosted an exciting contest to identify the best AI chess player, with Kaggle facilitating the competition. The challenge? To see which large language model (LLM) could outperform other LLMs in chess.
 
 As both an AI enthusiast and a chess fan, I’ve long been curious about why large language models (LLMs) struggle with chess, especially when compared to other specialized AIs. (For a deeper dive into this, check out this fascinating video from <a href="https://www.youtube.com/watch?v=iWhlrkfJrCQ&ab_channel=GothamChess" target="_blank">GothamChess</a>.) So this contest was a perfect opportunity to explore this question further.
 
 <p align="center">
-  <img src="/images/gambit.webp" alt="Queen's Gambit" style="width: 500px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <img src="/images/gambit.webp" alt="Queen's Gambit" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">Queen's Gambit, a popular Netflix series that sparked a chess renaissance.</figcaption>
 </p>
 
 ## Chess: A Game of Strategy and Phases
@@ -26,6 +28,10 @@ In chess, the game is divided into three main phases: **opening**, **middlegame*
 
 The **opening** refers to the first few moves where players focus on developing pieces, controlling the center, and ensuring the king's safety. These strategies are so played that they can be memorized, and many players have their favorite openings. The goal is to set up a strong position for the middlegame. There several well-known openings, such as the King's Indian Defense, Sicilian Defense, and Queen's Gambit, each with its own strategies and tactics.
 
+<p align="center">
+  <img src="/images/meme.jpeg" alt="Chess meme" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+</p>
+
 ### **Middlegame**
 
 The **middlegame** begins once the pieces are developed. This phase is all about tactical battles, with players trying to create weaknesses, attack the opponent's king, or gain material advantage. It’s where most of the action happens. In other words, the middlegame is where players try to outmaneuver each other, using tactics like forks, pins, and skewers to gain an advantage. There is no straightforward way to play the middlegame, as it depends on the position of the pieces and the players' strategies. Players often rely on **their intuition** and **experience** to navigate this complex phase.
@@ -34,9 +40,10 @@ The **middlegame** begins once the pieces are developed. This phase is all about
 
 The **endgame** comes when there are fewer pieces left, and players focus on promoting pawns and checkmating the opponent. Precision is key, and mastering endgame techniques can turn a slight advantage into victory. Actually, in high-level chess, the endgame is often where games has already been decided, as players with a slight advantage can convert it into a win. So basicly, it's almost rare to see a game go to checkmate in the endgame phase, as players often resign when they realize they cannot win.
 
-<p align="center">
-  <img src="/images/magnuskasparov.jpg" alt="Magnus Carlsen vs Garry Kasparov" style="width: 500px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-</p>
+<figure align="center">
+  <img src="/images/magnuskasparov.jpg" alt="Magnus Carlsen vs Garry Kasparov" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">Magnus Carlsen facing Garry Kasparov in Reykjavik Rapid tournament. 13 years old Carlsen drew the game against the legendary Kasparov. </figcaption>
+</figure>
 
 ## Why do I care about the chess phases?
 
@@ -89,11 +96,24 @@ When these two messages intersect, the **state marginals** describe the states t
 There is an amazing picture in the slides of CS 285 Berkeley course that shows how forward and backward massage passing can mimic our thinking process.
 
 <p align="center">
-  <img src="/images/statemarginals.png" alt="State Marginals" style="width: 500px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <img src="/images/statemarginals.png" alt="State Marginals" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">State Marginals in Graphical Models</figcaption>
 </p>
 
-Look closer, doesn't it look like the phases of chess? Isn't this wonderful? The forward messages represent how we think about the opening phase, where we consider the future moves and try to set up a strong position. The backward messages represent how we think about the endgame phase, where we focus on the final moves and checkmating the opponent. The intersection of these two messages represents the middlegame phase, where we try to outmaneuver our opponent and gain an advantage.
+Look closer—doesn't it resemble the phases of chess? Isn't this wonderful? The forward messages represent how we think about the opening phase, where we consider future moves and try to set up a strong position. The backward messages represent how we think about the endgame phase, where we focus on the final moves and checkmate the opponent. The intersection of these two messages represents the middlegame phase, where we try to outmaneuver our opponent and gain an advantage.
 
-I love this representation of chess phases as a graphical model, as it shows how our thinking process can be modeled as a probabilistic inference problem; ant it is yes another reason why you should love reinforcement learning and graphical models.
+I love this representation of chess phases as a graphical model, as it shows how our thinking process can be modeled as a probabilistic inference problem; and it is yet another reason why you should love reinforcement learning and graphical models. I think this is a beautiful example of why language models may not be the best fit for human reasoning in complex tasks, as they often lack structured reasoning. Instead, using reinforcement learning and other techniques that leverage graphical models can provide a more accurate representation of how we think and make decisions in complex scenarios like chess.
 
-HMU if you want to discuss this topic further or have any suggestions for improvements. I would love to hear your thoughts and ideas.
+### Stockfish, why RL is good I guess
+
+Stockfish, one of the most formidable open-source chess engines, still relies on a classic alpha–beta search at its core. Its true breakthrough came with the adoption of Neural Network Unified Evaluation (NNUE), a compact neural network first developed for Shogi and later integrated into Stockfish 12. The engine generates millions of positions by playing against itself and uses those self-play games to train the NNUE weights via Temporal-Difference Learning, so that the network’s evaluations more closely match the outcomes of deep search.
+
+What sets NNUE apart from larger convolutional models is its reliance on sparse piece-square features fed into a single hidden layer—this design makes it fast enough to be queried at every leaf node without slowing down the alpha–beta framework. During search, Stockfish merges these learned evaluations with its long-standing heuristics to guide move ordering and pruning. In combining exhaustive tree search with a lightweight, learned evaluation, Stockfish demonstrates how reinforcement learning can dramatically boost engine strength while preserving the proven search techniques that have powered chess engines for decades.
+
+<p align="center">
+  <img src="/images/meme2.webp" alt="Stockfish" style="width: 400px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+</p>
+
+I'm not
+
+Hit me up if you want to discuss this topic further or have any suggestions for improvements. I would love to hear your thoughts and ideas.
