Enhance "Shāh māt" blog post with improved explanation of reinforcement learning as inference in graphical models and refined mathematical expressions.

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Shāh māt"
 date: 2025-09-08
-permalink: /posts/shah-mat
+permalink: /posts/shah-mat/
 description: "Exploring the intersection of chess, AI, and graphical models."
 tags:
   - cool posts
@@ -55,13 +55,17 @@ Graphical models are a way to represent complex relationships between variables 
 
 ### Reinforcement Learning as Inference in Graphical Models
 
-**Core idea:** Treat RL control as inference in a probabilistic graphical model (PGM). We augment the standard MDP with **optimality variables** \(O_t\):
+Imagine reinforcement learning as an inference problem in a “decision forest,” where at each time step \(t\) a tiny lantern—our optimality variable \(O_t\)—glows brighter for actions that promise higher reward. Formally, we introduce a binary variable \(O_t\) at each step and define
 
-$$
-p(O_t = 1 | s_t, a_t) \propto \exp(r(s_t, a_t))
-$$
+\[
+p(O_t = 1 \mid s_t, a_t) \propto \exp\bigl(r(s_t, a_t)\bigr).
+\]
 
-Imagine walking through every decision as if following a glowing trail: the reward function becomes the light that guides us, making actions with higher payoff shine more brightly in the probability landscape. We introduce a binary flag \\(O_t\\) at each time step to indicate whether the chosen move is truly optimal—pushed to one during inference, these flags force the model to follow only the most promising trajectories. Under the hood, this structure resembles a simple chain, where each state s_t gives rise to an action a_t and an adjacent marker \\(O_t\\) that signals optimality. By weaving reward, optimality, and chain-like dependencies into a single graphical tapestry, we transform reinforcement learning into a journey of inference—seeking the highest-reward path through every fork in the road.
+Conditioning on \(O\_{1:T}=1\) forces the model to follow only the most promising trajectories. The resulting chain‐structured graphical model links
+\[
+s_1 \to a_1 \to O_1 \to s_2 \to a_2 \to O_2 \to \dots \to s_T \to a_T \to O_T,
+\]
+weaving states, actions, and optimality flags into a single probabilistic tapestry. Inference in this model—asking “Which path shines brightest?”—directly yields the soft‐optimal policy by preferring high‐reward branches, thus transforming the control problem into a journey of inference through the decision forest.
 
 ### Inference → Control
 
