--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -15,12 +15,14 @@ tags:
 
 As both an AI enthusiast and a chess fan, I’ve long been curious about why large language models (LLMs) struggle with chess, especially when compared to other specialized AIs. (For a deeper dive into this, check out this fascinating video from <a href="https://www.youtube.com/watch?v=iWhlrkfJrCQ&ab_channel=GothamChess" target="_blank">GothamChess</a>.) So this contest was a perfect opportunity to explore this question further.
 
-<p align="center">
-  <figure style="text-align: center;">
-    <img src="/images/gambit.webp" alt="Queen's Gambit" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-    <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em; text-align: center;">Queen's Gambit, a popular Netflix series that sparked a chess renaissance.</figcaption>
-  </figure>
-</p>
+<figure style="display: flex; flex-direction: column; align-items: center; margin: auto;">
+  <img src="/images/gambit.webp" 
+       alt="Queen's Gambit" 
+       style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+    Queen's Gambit, a popular Netflix series that sparked a chess renaissance.
+  </figcaption>
+</figure>
 
 
 ## Chess: A Game of Strategy and Phases
@@ -43,12 +45,14 @@ The **middlegame** begins once the pieces are developed. This phase is all about
 
 The **endgame** comes when there are fewer pieces left, and players focus on promoting pawns and checkmating the opponent. Precision is key, and mastering endgame techniques can turn a slight advantage into victory. Actually, in high-level chess, the endgame is often where games has already been decided, as players with a slight advantage can convert it into a win. So basicly, it's almost rare to see a game go to checkmate in the endgame phase, as players often resign when they realize they cannot win.
 
-<p align="center">
-  <figure style="text-align: center;">
-    <img src="/images/magnuskasparov.jpg" alt="Magnus Carlsen vs Garry Kasparov" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-    <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em; text-align: center;">Magnus Carlsen facing Garry Kasparov in the Reykjavik Rapid tournament. At 13, Carlsen drew the game against the legendary Kasparov.</figcaption>
-  </figure>
-</p>
+<figure style="display: flex; flex-direction: column; align-items: center; margin: auto;">
+  <img src="/images/magnuskasparov.jpg" 
+       alt="Magnus Carlsen vs Garry Kasparov" 
+       style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+    Magnus Carlsen facing Garry Kasparov in the Reykjavik Rapid tournament. At 13, Carlsen drew the game against the legendary Kasparov.
+  </figcaption>
+</figure>
 
 
 ## Why do I care about the chess phases?
@@ -105,12 +109,15 @@ When these two messages intersect, the **state marginals** describe the states t
 
 There is an amazing picture in the slides of CS 285 Berkeley course that shows how forward and backward massage passing can mimic our thinking process.
 
-<p align="center">
-  <figure style="text-align: center;">
-    <img src="/images/statemarginals.png" alt="State Marginals" style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-    <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em; text-align: center;">State Marginals in Graphical Models</figcaption>
-  </figure>
-</p>
+<figure style="display: flex; flex-direction: column; align-items: center;">
+  <img src="/images/statemarginals.png" 
+       alt="State Marginals" 
+       style="width: 600px; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <figcaption style="font-size: 0.9em; color: #555; margin-top: 0.5em;">
+    State Marginals in Graphical Models
+  </figcaption>
+</figure>
+
 
 Look closer—doesn't it resemble the phases of chess? Isn't this wonderful? The forward messages represent how we think about the opening phase, where we consider future moves and try to set up a strong position. The backward messages represent how we think about the endgame phase, where we focus on the final moves and checkmate the opponent. The intersection of these two messages represents the middlegame phase, where we try to outmaneuver our opponent and gain an advantage.
 
