Revise "BP Ranker" publication details for accuracy and clarity

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -62,13 +62,13 @@ Sergey Levine (UC Berkeley) popularized a powerful lens: **reinforcement learnin
 
 ### A (very) short primer on graphical models
 
-Graphical models describe dependencies between variables using nodes and edges. In RL, we model states $s_t$, actions $a_t$, and **optimality variables** $O_t$ that “light up” when an action is good:
+Graphical models describe dependencies between variables using nodes and edges. In RL, we model states \\(s_t\\), actions \\(a_t\\), and **optimality variables** \\(O_t\\) that “light up” when an action is good:
 
 $$
 p(O_t=1 \mid s_t,a_t) \propto \exp\!\big(r(s_t,a_t)\big).
 $$
 
-Condition on every step being optimal, $O_{1:T}=1$, and the inference problem asks: _Which actions make that likely?_ The chain looks like
+Condition on every step being optimal, \\(O*{1:T}=1\\), and the inference problem asks: \_Which actions make that likely?* The chain looks like
 
 $$
 s_1 \to a_1 \to O_1 \to s_2 \to a_2 \to O_2 \to \dots \to s_T \to a_T \to O_T.
@@ -90,9 +90,9 @@ Treating control as inference unifies planning and uncertainty in one framework:
 
 ### State marginals: where forward meets backward
 
-- **Forward messages ($\alpha_t$)**: probability mass that _reaches_ a state, given the past and rewards along the way.
-- **Backward messages ($\beta_t$)**: probability that _from_ a state you can continue optimally to the goal.
-- Their product gives the **state marginal**—how likely you are to occupy each state at time $t$, given optimality.
+- **Forward messages ( \\(\alpha_t\\) )**: probability mass that _reaches_ a state, given the past and rewards along the way.
+- **Backward messages ( \\(\beta_t\\) )**: probability that _from_ a state you can continue optimally to the goal.
+- Their product gives the **state marginal**—how likely you are to occupy each state at time \\(t\\), given optimality.
 
 <figure style="display: flex; flex-direction: column; align-items: center;">
   <img src="/images/statemarginals.png" 
